--- a/ToolkitBoilerplate/ClientApp/public/index.html
+++ b/ToolkitBoilerplate/ClientApp/public/index.html
@@ -1,12 +1,16 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>toolkit-boilerplate</title>
-  </head>
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <script src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>
+
+</head>
   <body>
     <noscript>
       <strong>We're sorry but toolkit-boilerplate doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
