Alert transitions, login fixes

--- a/ToolkitBoilerplate/ClientApp/public/index.html
+++ b/ToolkitBoilerplate/ClientApp/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>toolkit-boilerplate</title>
+    <title>TODO Change in ClientApp/public/index.html</title>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <script src="https://www.google.com/recaptcha/api.js?render=explicit" async defer></script>
